--- a/src/styles/modules/home-page.module.css
+++ b/src/styles/modules/home-page.module.css
@@ -23,7 +23,7 @@
   width: 100%;
 }
 
-.todo {
+.work {
   width: 100%;
 }
 
@@ -66,7 +66,7 @@
     width: 60%;
   }
 
-  .todo {
+  .work {
     width: 40%;
     padding: 0 10px;
   }
@@ -91,64 +91,5 @@
     font-size: font-size-18;
     line-height: line-height-18;
     letter-spacing: letter-spacing-18;
-  }
-}
-
-/* TODO: 나중애 CSS 결합하기 */
-.workList {
-  height: 300px;
-  overflow-y: scroll;
-}
-
-.workList::-webkit-scrollbar {
-  display: none;
-}
-
-.workItem a {
-  display: flex;
-  justify-content: flex-start;
-  align-items: center;
-  margin: 8px 0;
-  padding: 0 8px;
-  width: 100%;
-  height: 50px;
-  font-size: font-size-16;
-  line-height: line-height-16;
-  letter-spacing: letter-spacing-16;
-  color: primary;
-  border: 1px solid #f5f5f5;
-  border-radius: 8px;
-  transition: background-color 300ms ease-in-out, color 300ms ease-in-out;
-}
-
-.workItem a:hover {
-  background-color: green;
-  color: white;
-}
-
-.workItem a.lsitNone {
-  justify-content: center;
-  width: 180px;
-  margin: 0 auto;
-}
-
-.lsitNone {
-  margin: 12px 0;
-  font-size: font-size-14;
-  line-height: line-height-14;
-  letter-spacing: letter-spacing-14;
-  color: primary;
-  text-align: center;
-}
-
-@media screen and (min-width: 768px) {
-  .workList {
-    height: 400px;
-  }
-}
-
-@media screen and (min-width: 1200px) {
-  .workList {
-    height: 500px;
   }
 }
