--- a/src/styles/modules/markdown.module.css
+++ b/src/styles/modules/markdown.module.css
@@ -1,4 +1,4 @@
-@value primary, secondary, white, background, green, green-active from '../constants/color.css';
+@value primary, secondary, white, light-background, background, green, green-active from '../constants/color.css';
 
 @value font-size-12, line-height-12, letter-spacing-12, font-size-14,line-height-14, letter-spacing-14, font-size-16, line-height-16,letter-spacing-16 from '../constants/typography.css';
 
@@ -53,7 +53,7 @@
 }
 
 .renderer pre {
-  background-color: #f5f5f5;
+  background-color: light-background;
   padding: 12px;
   border-radius: 4px;
   white-space: break-spaces;
