--- a/src/styles/modules/work-list.module.css
+++ b/src/styles/modules/work-list.module.css
@@ -1,9 +1,69 @@
-@value primary, secondary, white, background from '../constants/color.css';
+@value primary, secondary, white, background, green, red, dark-yellow from '../constants/color.css';
 
 @value font-size-16,line-height-16, letter-spacing-16 from '../constants/typography.css';
 
 @value card-shadow from '../constants/box-shadow.css';
 
+/* NOTE: home section */
+.workLinkList {
+  height: 300px;
+  overflow-y: scroll;
+}
+
+.workLinkList::-webkit-scrollbar {
+  display: none;
+}
+
+.workLinkList .workItem a {
+  display: flex;
+  justify-content: flex-start;
+  align-items: center;
+  margin: 8px 0;
+  padding: 0 8px;
+  width: 100%;
+  height: 50px;
+  font-size: font-size-16;
+  line-height: line-height-16;
+  letter-spacing: letter-spacing-16;
+  color: primary;
+  border: 1px solid #f5f5f5;
+  border-radius: 8px;
+  transition: background-color 300ms ease-in-out, color 300ms ease-in-out;
+}
+
+.workLinkList .workItem a:hover {
+  background-color: green;
+  color: white;
+}
+
+.workLinkList .workItem a.lsitNone {
+  justify-content: center;
+  width: 180px;
+  margin: 0 auto;
+}
+
+.workLinkList .lsitNone {
+  margin: 12px 0;
+  font-size: font-size-14;
+  line-height: line-height-14;
+  letter-spacing: letter-spacing-14;
+  color: primary;
+  text-align: center;
+}
+
+@media screen and (min-width: 768px) {
+  .workLinkList {
+    height: 400px;
+  }
+}
+
+@media screen and (min-width: 1200px) {
+  .workLinkList {
+    height: 500px;
+  }
+}
+
+/* NOTE: work section */
 .workList {
   position: relative;
 }
@@ -94,11 +154,11 @@
 
 .toolBtn.editBtn:active,
 .toolBtn.editBtn.isActive {
-  color: #ffc92c;
+  color: dark-yellow;
 }
 
 .toolBtn.removeBtn:active {
-  color: #ff4949;
+  color: red;
 }
 
 .toolBtn svg {
@@ -137,10 +197,10 @@
   }
 
   .toolBtn.editBtn:hover {
-    color: #ffc92c;
+    color: dark-yellow;
   }
 
   .toolBtn.removeBtn:hover {
-    color: #ff4949;
+    color: red;
   }
 }
