--- a/src/styles/bases/global.css
+++ b/src/styles/bases/global.css
@@ -1,3 +1,12 @@
+body.isDark {
+  background-color: #121212;
+}
+
+.app.isDark {
+  height: 100%;
+  background-color: #121212;
+}
+
 .visually-hidden {
   position: absolute !important;
   width: 1px !important;
@@ -55,11 +64,13 @@
 /* NOTE: slide carousel */
 .carousel {
   margin: 0 -15px;
+  border-radius: 4px;
+  overflow: hidden;
 }
 
 .slick-dots {
   bottom: 0;
-  background-color: #fff;
+  background-color: #f5f5f5;
 }
 
 .slick-dots li button:hover:before {
@@ -86,3 +97,5 @@
     margin: 0;
   }
 }
+
+/* NOTE: Dark theme */
