--- a/src/styles/modules/error-page.module.css
+++ b/src/styles/modules/error-page.module.css
@@ -1,5 +1,7 @@
 @value primary, secondary from '../constants/color.css';
 
+@value dark-primary, dark-secondary from '../constants/dark-theme.css';
+
 @value font-size-14, line-height-14, letter-spacing-14, font-size-16, line-height-16, letter-spacing-16, font-size-18,line-height-18,letter-spacing-18 from '../constants/typography.css';
 
 .error {
@@ -37,4 +39,13 @@
     line-height: line-height-16;
     letter-spacing: letter-spacing-16;
   }
+}
+
+/* NOTE: Dark theme */
+.error.isDark .errorTitle {
+  color: dark-primary;
+}
+
+.error.isDark .errorDesc {
+  color: dark-secondary;
 }
