--- a/src/styles/modules/mobile-navbar.module.css
+++ b/src/styles/modules/mobile-navbar.module.css
@@ -1,5 +1,7 @@
 @value primary, secondary, white, background, green, green-active from '../constants/color.css';
 
+@value dark-secondary, dark-light-background from '../constants/dark-theme.css';
+
 @value mobile-level from '../constants/z-index.css';
 
 @value font-size-14, line-height-14, letter-spacing-14, font-size-16,line-height-16,letter-spacing-16, 
@@ -16,7 +18,7 @@ font-size-24,line-height-24, letter-spacing-24 from '../constants/typography.css
   position: fixed;
   top: 0;
   left: 0;
-  width: 100vw;
+  width: 100%;
   height: 60px;
   background-color: white;
   border-bottom: 1px solid background;
@@ -62,6 +64,12 @@ font-size-24,line-height-24, letter-spacing-24 from '../constants/typography.css
   color: green-active;
 }
 
+/* NOTE: Dark theme */
+.header.isDark .globalHeader {
+  background-color: dark-light-background;
+  border-bottom: none;
+}
+
 /* NOTE: footer */
 .globalFooter {
   height: 4rem;
@@ -95,4 +103,22 @@ font-size-24,line-height-24, letter-spacing-24 from '../constants/typography.css
 .link svg {
   width: 1.5rem;
   height: 1.5rem;
+}
+
+/* NOTE: Dark theme */
+.globalFooter.isDark {
+  background-color: dark-light-background;
+  border-top: none;
+}
+
+.globalFooter.isDark .link {
+  color: dark-secondary;
+}
+
+.globalFooter.isDark .link.isActive {
+  color: green;
+}
+
+.globalFooter.isDark .link:active {
+  color: green-active;
 }
