--- a/src/styles/modules/sidebar.module.css
+++ b/src/styles/modules/sidebar.module.css
@@ -1,5 +1,7 @@
 @value primary, secondary, white, background, green, green-active from '../constants/color.css';
 
+@value dark-primary, dark-secondary, dark-background, dark-light-background from '../constants/dark-theme.css';
+
 @value font-size-12, line-height-12, letter-spacing-12, font-size-16, line-height-16, letter-spacing-16, font-size-18,line-height-18,letter-spacing-18 from '../constants/typography.css';
 
 @value snb-level from '../constants/z-index.css';
@@ -155,4 +157,28 @@
     color: secondary;
     content: '|';
   }
+}
+
+/* NOTE: dark theme */
+.article.isDark {
+  background-color: dark-background;
+}
+
+.article.isDark .snbItemButton {
+  color: dark-secondary;
+}
+
+.article.isDark .snbItemButton:not(.isDisable).isActive,
+.article.isDark .snbItemButton:not(.isDisable):hover {
+  background-color: dark-light-background;
+  color: dark-primary;
+}
+
+.article.isDark .detailItem dd,
+.article.isDark .detailItem button {
+  color: dark-secondary;
+}
+
+.article.isDark .detailItem:not(:last-child)::after {
+  color: dark-secondary;
 }
