--- a/src/styles/modules/work.module.css
+++ b/src/styles/modules/work.module.css
@@ -1,5 +1,7 @@
 @value primary, secondary, white, light-background, background, green from '../constants/color.css';
 
+@value dark-primary, dark-secondary, dark-light-background, dark-background from '../constants/dark-theme.css';
+
 @value font-size-14, line-height-14, letter-spacing-14, font-size-16, line-height-16, letter-spacing-16, font-size-24, line-height-24, letter-spacing-24  from '../constants/typography.css';
 
 .workGroup {
@@ -19,10 +21,10 @@
 }
 
 .header h1 {
-  color: primary;
   font-size: font-size-16;
   line-height: line-height-16;
   letter-spacing: letter-spacing-16;
+  color: primary;
 }
 
 .openBtn svg {
@@ -135,6 +137,41 @@
   margin-top: 24px;
 }
 
+/* NOTE: Dark theme */
+.workGroup.isDark .header h1 {
+  color: dark-primary;
+}
+
+.workGroup.isDark .openBtn svg {
+  color: dark-secondary;
+}
+
+.workGroup.isDark .editorHeader {
+  background-color: dark-light-background;
+  border-bottom: none;
+}
+
+.workGroup.isDark .editorHeader h2 {
+  color: dark-primary;
+}
+
+.workGroup.isDark .editor {
+  background-color: dark-light-background;
+  border: none;
+  border-radius: 4px;
+}
+
+.workGroup.isDark input,
+.workGroup.isDark textarea {
+  color: dark-primary;
+  background-color: dark-background;
+  border: none;
+}
+
+.workGroup.isDark .previewBtn {
+  color: dark-secondary;
+}
+
 @media screen and (min-width: 768px) {
   .workGroup {
     height: 100vh;
@@ -142,7 +179,6 @@
   }
 
   .header h1 {
-    color: primary;
     font-size: font-size-24;
     line-height: line-height-24;
     letter-spacing: letter-spacing-24;
