--- a/src/styles/modules/home-page.module.css
+++ b/src/styles/modules/home-page.module.css
@@ -18,7 +18,7 @@
   display: flex;
   flex-wrap: wrap;
   justify-content: space-between;
-  margin-bottom: 12px;
+  margin-bottom: 1.2rem;
 }
 
 .benner {
@@ -39,8 +39,8 @@
   justify-content: flex-start;
   align-items: center;
   margin: 0 -15px;
-  padding: 0 12px;
-  height: 64px;
+  padding: 0 1.2rem;
+  height: 6.4rem;
 }
 
 .articleTitle h2 {
@@ -51,7 +51,7 @@
 }
 
 .articleTitle strong {
-  margin-left: 8px;
+  margin-left: 0.8rem;
   font-size: font-size-16;
   line-height: line-height-16;
   letter-spacing: letter-spacing-16;
@@ -60,7 +60,7 @@
 
 @media screen and (min-width: 768px) {
   .articleGroup {
-    padding: 24px 0;
+    padding: 2.4rem 0;
     height: 100vh;
   }
 
@@ -70,11 +70,11 @@
 
   .work {
     width: 40%;
-    padding: 0 10px;
+    padding: 0 1rem;
   }
 
   .articleLeft {
-    margin-bottom: 36px;
+    margin-bottom: 3.6rem;
   }
 
   .articleTitle {
