--- a/src/styles/constants/typography.css
+++ b/src/styles/constants/typography.css
@@ -1,23 +1,19 @@
-@value font-size-12: 12px;
-@value line-height-12: 16px;
+@value font-size-12: 1.2rem;
+@value line-height-12: 1.6rem;
 @value letter-spacing-12: -0.005em;
 
-@value font-size-13: 13px;
-@value line-height-13: 20px;
-@value letter-spacing-13: -0.01em;
-
-@value font-size-14: 14px;
-@value line-height-14: 24px;
+@value font-size-14: 1.4rem;
+@value line-height-14: 2.4rem;
 @value letter-spacing-14: -0.01em;
 
-@value font-size-16: 16px;
-@value line-height-16: 24px;
+@value font-size-16: 1.6rem;
+@value line-height-16: 2.4rem;
 @value letter-spacing-16: -0.01em;
 
-@value font-size-18: 18px;
-@value line-height-18: 28px;
+@value font-size-18: 1.8rem;
+@value line-height-18: 2.8rem;
 @value letter-spacing-18: -0.02em;
 
-@value font-size-24: 24px;
-@value line-height-24: 34px;
+@value font-size-24: 2.4rem;
+@value line-height-24: 3.4rem;
 @value letter-spacing-24: -0.01em;
