--- a/src/styles/layouts/grids.css
+++ b/src/styles/layouts/grids.css
@@ -1,6 +1,6 @@
 .main-content {
   overflow-y: auto;
-  padding: 20px 0 80px;
+  padding: 2rem 0 8rem;
 }
 
 .main-content::-webkit-scrollbar {
@@ -9,7 +9,7 @@
 
 .container {
   width: 100%;
-  padding: 0 5px;
+  padding: 0 0.5rem;
   margin: 0 auto;
 }
 
@@ -19,7 +19,7 @@
 }
 
 .container [class^='col-'] {
-  padding: 0 10px;
+  padding: 0 1rem;
 }
 
 .container .col-sm-1 {
@@ -45,7 +45,7 @@
   }
 
   .container {
-    max-width: 1020px;
+    max-width: 102rem;
     padding: 0 30px;
   }
   .container .col-md-1 {
@@ -88,7 +88,7 @@
 
 @media screen and (min-width: 1200px) {
   .container {
-    max-width: 1140px;
+    max-width: 114rem;
     padding: 0;
   }
   .container .col-lg-1 {
