--- a/src/styles/modules/buttons.module.css
+++ b/src/styles/modules/buttons.module.css
@@ -4,9 +4,9 @@
   display: flex;
   align-items: center;
   justify-content: center;
-  padding: 0 8px;
+  padding: 0 0.8rem;
   font-weight: 700;
-  border-radius: 4px;
+  border-radius: 0.4rem;
 }
 
 .baseBtn:disabled {
