--- a/src/styles/modules/common.module.css
+++ b/src/styles/modules/common.module.css
@@ -37,10 +37,10 @@
   flex-direction: column;
   justify-content: center;
   align-items: center;
-  width: 260px;
-  padding: 24px;
+  width: 26em;
+  padding: 2.4em;
   background-color: white;
-  border-radius: 4px;
+  border-radius: 0.4em;
   z-index: popup-level;
   box-shadow: popup-shadow;
   opacity: 0;
@@ -60,7 +60,7 @@
 
 .popupBody {
   width: 100%;
-  margin: 12px 0;
+  margin: 1.2em 0;
   text-align: center;
 }
 
@@ -89,7 +89,7 @@
 
 .authBtn {
   width: 100%;
-  height: 48px;
+  height: 4.8rem;
   background-color: white;
   font-size: font-size-16;
   line-height: line-height-16;
@@ -100,7 +100,7 @@
 }
 
 .authBtn:not(:last-child) {
-  margin-bottom: 8px;
+  margin-bottom: 0.8em;
 }
 
 .authBtn:active {
@@ -117,8 +117,8 @@
 
 .msgPopup .popupHeader svg {
   display: block;
-  width: 42px;
-  height: 42px;
+  width: 4.2rem;
+  height: 4.2rem;
   color: green;
 }
 
@@ -131,7 +131,7 @@
 
 .cancleBtn,
 .closeBtn {
-  height: 32px;
+  height: 3.2em;
   font-size: font-size-14;
   line-height: line-height-14;
   letter-spacing: letter-spacing-14;
@@ -140,7 +140,7 @@
 @media screen and (min-width: 768px) {
   .authPopup,
   .msgPopup {
-    width: 360px;
+    width: 36em;
   }
 
   .authBtn:hover {
@@ -161,23 +161,23 @@
 }
 
 .myMenu.isActive .myMenuList {
-  max-height: 198px;
-  padding: 8px;
+  max-height: 19.8rem;
+  padding: 0.8rem;
   opacity: 1;
   pointer-events: all;
 }
 
 a.toolBtn,
 button.toolBtn {
-  margin: 8px 0;
-  padding: 0 12px;
+  margin: 0.8rem 0;
+  padding: 0 1.2rem;
   width: 100%;
-  height: 50px;
+  height: 5rem;
   font-size: font-size-14;
   line-height: line-height-14;
   letter-spacing: letter-spacing-14;
   color: primary;
-  border-radius: 22px;
+  border-radius: 2.2rem;
   transition: box-shadow 300ms ease-in-out, color 300ms ease-in-out;
 }
 
@@ -193,21 +193,21 @@ button.toolBtn {
 }
 
 .toolIcon {
-  width: 24px;
-  height: 24px;
+  width: 2.4rem;
+  height: 2.4rem;
 }
 
 button.mymemuBtn {
   width: 100%;
-  height: 60px;
-  border-radius: 22px;
+  height: 6rem;
+  border-radius: 2.2rem;
   background-color: light-background;
   transition: box-shadow 300ms ease-in-out;
 }
 
 .mymemuBtn .userIcon {
-  width: 40px;
-  height: 40px;
+  width: 4rem;
+  height: 4rem;
   border-radius: 50%;
   object-fit: cover;
 }
@@ -235,16 +235,16 @@ button.mymemuBtn {
   button.toolBtn,
   button.mymemuBtn {
     justify-content: flex-start;
-    padding: 0 12px;
-    border-radius: 4px;
+    padding: 0 1.2rem;
+    border-radius: 0.4rem;
   }
 
   .mymemuBtn .userIcon {
-    margin-right: 8px;
+    margin-right: 0.8rem;
   }
 
   .toolIcon {
-    margin-right: 12px;
+    margin-right: 1.2rem;
   }
 
   .toolBtn:hover {
@@ -300,19 +300,19 @@ button.mymemuBtn {
 
 .lodingSmall {
   margin: 0 0 16px;
-  width: 32px;
-  height: 32px;
+  width: 3.2rem;
+  height: 3.2rem;
   border-radius: 50%;
-  border: 3px solid background;
-  border-top: 3px solid green;
+  border: 0.3rem solid background;
+  border-top: 0.3rem solid green;
   animation: spin 2s linear infinite;
 }
 
 .lodingMiddle {
-  width: 50px;
-  height: 50px;
-  border: 6px solid background;
-  border-top: 6px solid green;
+  width: 5rem;
+  height: 5rem;
+  border: 0.6rem solid background;
+  border-top: 0.6rem solid green;
   border-radius: 50%;
   animation: spin 2s linear infinite;
 }
@@ -336,7 +336,7 @@ button.mymemuBtn {
   flex-direction: column;
   justify-content: space-between;
   align-items: normal;
-  padding: 16px;
+  padding: 1.6rem;
   width: 60%;
   height: 100vh;
   background-color: white;
@@ -356,7 +356,7 @@ button.mymemuBtn {
 }
 
 .detailItem {
-  margin-right: 12px;
+  margin-right: 1.2rem;
 }
 
 .detailItem dd,
@@ -365,7 +365,7 @@ button.mymemuBtn {
   line-height: line-height-14;
   letter-spacing: letter-spacing-14;
   color: secondary;
-  height: 48px;
+  height: 4.8rem;
 }
 
 .detailItem dd {
