--- a/src/styles/modules/dropdown.module.css
+++ b/src/styles/modules/dropdown.module.css
@@ -2,17 +2,17 @@
 
 @value dark-primary, dark-secondary, dark-background, dark-light-background from '../constants/dark-theme.css';
 
-@value font-size-14,line-height-14, letter-spacing-14 from '../constants/typography.css';
+@value font-size-14,line-height-14, letter-spacing-14, font-size-16,line-height-16, letter-spacing-16 from '../constants/typography.css';
 
 @value teams-count: 7;
 @value ranks-count: 6;
 @value theme-count: 3;
 
-@value dropdown-height: 44px;
-@value dropdown-padding: 8px;
+@value dropdown-height: 4.4rem;
+@value dropdown-padding: 0.8rem;
 
 .formLabel {
-  margin-bottom: 12px;
+  margin-bottom: 1.2rem;
   font-size: font-size-16;
   line-height: line-height-16;
   letter-spacing: letter-spacing-16;
@@ -21,34 +21,34 @@
 
 .formInput {
   position: relative;
-  margin-bottom: 4px;
+  margin-bottom: 0.4rem;
   width: 100%;
-  height: 42px;
+  height: 4.2rem;
   background-color: white;
   font-size: font-size-14;
   line-height: line-height-14;
   letter-spacing: letter-spacing-14;
   font-weight: 400;
   color: primary;
-  border-radius: 4px;
+  border-radius: 0.4rem;
 }
 
 .dropdownList {
-  padding: 8px;
+  padding: 0.8rem;
   width: 100%;
   background-color: white;
   text-align: center;
-  border-radius: 4px;
+  border-radius: 0.4rem;
 }
 
 .listBtn {
   width: 100%;
-  height: 44px;
+  height: 4.4rem;
   font-size: font-size-14;
   line-height: line-height-14;
   letter-spacing: letter-spacing-14;
   color: secondary;
-  border-radius: 4px;
+  border-radius: 0.4rem;
 }
 
 .listBtn:active {
@@ -58,10 +58,10 @@
 
 .dropdownIcon {
   position: absolute;
-  top: 12px;
-  right: 10px;
+  top: 1.2rem;
+  right: 1rem;
   transform: rotate(180deg);
-  font-size: 18px;
+  font-size: 1.8rem;
   transition: transform 300ms ease-in-out;
 }
 
@@ -80,7 +80,7 @@
 .themesList,
 .teamsList,
 .ranksList {
-  margin-bottom: 20px;
+  margin-bottom: 2rem;
   max-height: 0;
   opacity: 0;
   overflow-y: hidden;
@@ -106,7 +106,7 @@
 .teams.isDark .formLabel,
 .ranks.isDark .formLabel,
 .themes.isDark .formLabel {
-  color: dark-primary;
+  color: dark-secondary;
 }
 
 .teams.isDark .formInput,
