--- a/src/styles/modules/mobile-navbar.module.css
+++ b/src/styles/modules/mobile-navbar.module.css
@@ -11,7 +11,7 @@ font-size-24,line-height-24, letter-spacing-24 from '../constants/typography.css
 .header {
   position: relative;
   width: 100%;
-  height: 60px;
+  height: 6rem;
 }
 
 .globalHeader {
@@ -19,15 +19,15 @@ font-size-24,line-height-24, letter-spacing-24 from '../constants/typography.css
   top: 0;
   left: 0;
   width: 100%;
-  height: 60px;
+  height: 6rem;
   background-color: white;
-  border-bottom: 1px solid background;
+  border-bottom: 0.1rem solid background;
   transition: 0.4s ease;
   z-index: mobile-level;
 }
 
 .globalHeader.hide {
-  transform: translateY(-60px);
+  transform: translateY(-6rem);
 }
 
 .logo {
@@ -44,18 +44,18 @@ font-size-24,line-height-24, letter-spacing-24 from '../constants/typography.css
 
 .mobileIcon {
   position: absolute;
-  right: 24px;
+  right: 2.4rem;
   top: 50%;
-  width: 48px;
-  height: 48px;
-  font-size: 24px;
+  width: 4.8rem;
+  height: 4.8rem;
+  font-size: 2.4rem;
   color: green;
   transform: translateY(-50%);
 }
 
 .smProfile {
-  width: 28px;
-  height: 28px;
+  width: 2.8rem;
+  height: 2.8rem;
   border-radius: 50%;
   object-fit: cover;
 }
@@ -72,7 +72,7 @@ font-size-24,line-height-24, letter-spacing-24 from '../constants/typography.css
 
 /* NOTE: footer */
 .globalFooter {
-  height: 4rem;
+  height: 6.4rem;
   width: 100%;
   position: fixed;
   display: flex;
@@ -101,8 +101,8 @@ font-size-24,line-height-24, letter-spacing-24 from '../constants/typography.css
 }
 
 .link svg {
-  width: 1.5rem;
-  height: 1.5rem;
+  width: 2.4rem;
+  height: 2.4rem;
 }
 
 /* NOTE: Dark theme */
