--- a/src/styles/modules/search.module.css
+++ b/src/styles/modules/search.module.css
@@ -18,7 +18,7 @@
   display: flex;
   justify-content: flex-end;
   align-items: center;
-  margin-bottom: 12px;
+  margin-bottom: 1.2rem;
 }
 
 .serchInput {
@@ -26,28 +26,28 @@
   display: flex;
   justify-content: flex-start;
   align-items: center;
-  height: 26px;
+  height: 2.6rem;
   color: primary;
-  padding: 8px 4px;
+  padding: 0.8rem 0.4rem;
 }
 
 .serchInput::after {
   position: absolute;
-  bottom: -2px;
+  bottom: -0.2rem;
   left: 0;
   width: 100%;
-  height: 2px;
+  height: 0.2rem;
   background-color: background;
   content: '';
 }
 
 .serchInput svg {
-  font-size: 18px;
+  font-size: 1.8rem;
   color: secondary;
 }
 
 .serchInput input {
-  margin-left: 2px;
+  margin-left: 0.2rem;
   font-size: font-size-16;
   line-height: line-height-16;
   letter-spacing: letter-spacing-16;
@@ -74,6 +74,6 @@
 @media screen and (min-width: 768px) {
   .memberGroup {
     height: 100vh;
-    padding: 24px 0;
+    padding: 2.4rem 0;
   }
 }
