--- a/src/styles/modules/sidebar.module.css
+++ b/src/styles/modules/sidebar.module.css
@@ -11,7 +11,7 @@
   display: flex;
   flex-direction: column;
   align-items: flex-start;
-  padding: 24px 0;
+  padding: 2.4rem 0;
   height: 100vh;
   background-color: white;
   z-index: snb-level;
@@ -32,13 +32,13 @@
   align-items: center;
   flex-direction: column;
   justify-content: center;
-  padding: 10px;
+  padding: 1rem;
   width: 100%;
   font-size: font-size-16;
   line-height: line-height-16;
   letter-spacing: letter-spacing-16;
   color: secondary;
-  border-radius: 4px;
+  border-radius: 0.4rem;
   transition: background-color 300ms ease-in-out, color 300ms ease-in-out;
 }
 
@@ -53,13 +53,13 @@
 }
 
 .snbItemButton svg {
-  width: 24px;
-  height: 24px;
+  width: 2.4rem;
+  height: 2.4rem;
   pointer-events: none;
 }
 
 .tabletLogo {
-  margin-bottom: 66px;
+  margin-bottom: 6.6rem;
 }
 
 .tabletLogo a {
@@ -67,21 +67,21 @@
 }
 
 .tabletLogo img {
-  width: 60px;
-  height: 60px;
+  width: 6rem;
+  height: 6rem;
 }
 
 .footer {
   position: absolute;
-  bottom: 24px;
+  bottom: 2.4rem;
   left: 0;
   width: 100%;
-  padding: 0 14px;
+  padding: 0 1.4rem;
 }
 
 .loginBtn {
   width: 100%;
-  height: 60px;
+  height: 6rem;
   font-size: font-size-16;
   line-height: line-height-16;
   letter-spacing: letter-spacing-16;
@@ -92,7 +92,7 @@
   flex-direction: column;
   justify-content: flex-start;
   align-items: center;
-  margin-top: 12px;
+  margin-top: 1.2rem;
 }
 
 .detailItem {
@@ -115,7 +115,7 @@
 
 @media screen and (min-width: 1200px) {
   .logo {
-    margin-bottom: 66px;
+    margin-bottom: 6.6rem;
   }
 
   .logo a {
@@ -124,18 +124,18 @@
 
   .logo img {
     width: 100%;
-    height: 32px;
+    height: 3.2rem;
   }
 
   .snbItemButton {
     flex-direction: row;
     justify-content: flex-start;
-    height: 60px;
+    height: 6rem;
     font-weight: 700;
   }
 
   .snbItemButton svg {
-    margin-right: 12px;
+    margin-right: 1.2rem;
   }
 
   .loginBtn {
@@ -153,7 +153,7 @@
   }
 
   .detailItem:not(:last-child)::after {
-    margin: 0 4px;
+    margin: 0 0.4rem;
     color: secondary;
     content: '|';
   }
