--- a/src/styles/modules/team-card.module.css
+++ b/src/styles/modules/team-card.module.css
@@ -15,7 +15,7 @@
   display: flex;
   justify-content: flex-start;
   align-items: center;
-  padding: 10px 0;
+  padding: 1rem 0;
   width: 100%;
   overflow-x: scroll;
 }
@@ -28,27 +28,27 @@
   display: flex;
   justify-content: center;
   flex-direction: column;
-  padding: 0 8px;
-  height: 160px;
-  margin: 0 10px;
-  width: 240px;
+  padding: 0 0.8rem;
+  height: 16rem;
+  margin: 0 1rem;
+  width: 24rem;
   flex-shrink: 0;
   background-color: white;
-  border-radius: 4px;
+  border-radius: 0.4rem;
   transition: box-shadow 300ms ease-in-out, transform 300ms ease-in-out;
 }
 
 .teamItem:active {
   box-shadow: card-shadow;
-  transform: translate3d(0px, -0.25rem, 0px);
+  transform: translate3d(0px, -0.4rem, 0px);
 }
 
 .itemTop {
-  margin: 0 -8px;
+  margin: 0 -0.8rem;
   display: flex;
-  padding: 8px 0;
+  padding: 0.8rem 0;
   justify-content: center;
-  margin-bottom: 12px;
+  margin-bottom: 1.2rem;
 }
 
 .imgWrapper {
@@ -61,8 +61,8 @@
 }
 
 .teamCardImg img {
-  width: 60px;
-  height: 60px;
+  width: 6rem;
+  height: 6rem;
   object-fit: cover;
 }
 
@@ -82,9 +82,9 @@
   position: absolute;
   right: 0;
   bottom: 0;
-  width: 20px;
-  height: 20px;
-  border: 3px solid white;
+  width: 2rem;
+  height: 2rem;
+  border: 0.3rem solid white;
   border-radius: 50%;
 }
 
@@ -119,7 +119,7 @@
 }
 
 .userTeam::after {
-  margin: 0 2px;
+  margin: 0 0.2rem;
   content: '/';
 }
 
@@ -161,11 +161,11 @@
     display: flex;
     justify-content: center;
     align-items: center;
-    font-size: 24px;
-    width: 48px;
-    height: 48px;
+    font-size: 2.4rem;
+    width: 4.8rem;
+    height: 4.8rem;
     color: secondary;
-    border-radius: 4px;
+    border-radius: 0.4rem;
     transform: translateY(-50%);
     transition: color 300ms ease-in-out, background-color 300ms ease-in-out;
   }
@@ -185,6 +185,6 @@
 
   .teamItem:hover {
     box-shadow: card-shadow;
-    transform: translate3d(0px, -0.25rem, 0px);
+    transform: translate3d(0px, -0.4rem, 0px);
   }
 }
