--- a/src/styles/modules/work-list.module.css
+++ b/src/styles/modules/work-list.module.css
@@ -8,7 +8,7 @@
 
 /* NOTE: home section */
 .workLinkList {
-  height: 300px;
+  height: 30rem;
   overflow-y: scroll;
 }
 
@@ -20,16 +20,16 @@
   display: flex;
   justify-content: flex-start;
   align-items: center;
-  margin: 8px 0;
-  padding: 0 8px;
+  margin: 0.8rem 0;
+  padding: 0 0.8rem;
   width: 100%;
-  height: 50px;
+  height: 5rem;
   font-size: font-size-16;
   line-height: line-height-16;
   letter-spacing: letter-spacing-16;
   color: primary;
-  border: 1px solid background;
-  border-radius: 8px;
+  border: 0.1rem solid background;
+  border-radius: 0.8rem;
   transition: background-color 300ms ease-in-out, color 300ms ease-in-out;
 }
 
@@ -40,12 +40,12 @@
 
 .workLinkList .workItem a.lsitNone {
   justify-content: center;
-  width: 180px;
+  width: 18rem;
   margin: 0 auto;
 }
 
 .workLinkList .lsitNone {
-  margin: 12px 0;
+  margin: 1.2rem 0;
   font-size: font-size-14;
   line-height: line-height-14;
   letter-spacing: letter-spacing-14;
@@ -67,7 +67,7 @@
 
 @media screen and (min-width: 768px) {
   .workLinkList {
-    height: 400px;
+    height: 40rem;
   }
 
   .workLinkList .workItem a:hover {
@@ -83,7 +83,7 @@
 
 @media screen and (min-width: 1200px) {
   .workLinkList {
-    height: 500px;
+    height: 50rem;
   }
 }
 
@@ -96,29 +96,29 @@
   display: flex;
   justify-content: space-between;
   align-items: center;
-  padding: 0 8px;
-  height: 50px;
-  margin: 6px 0;
-  border: 1px solid background;
-  border-radius: 4px;
+  padding: 0 0.8rem;
+  height: 5rem;
+  margin: 0.6rem 0;
+  border: 0.1rem solid background;
+  border-radius: 0.4rem;
   width: 100%;
   transition: box-shadow 300ms ease-in-out, transform 300ms ease-in-out;
 }
 
 .openBtn:active {
-  transform: translate3d(0px, -0.25rem, 0px);
+  transform: translate3d(0px, -0.4rem, 0px);
   box-shadow: card-shadow;
 }
 
 .title {
-  font-size: 18px;
+  font-size: 1.8rem;
   color: primary;
   font-weight: 400;
 }
 
 .date {
   color: secondary;
-  font-size: 14px;
+  font-size: 1.4rem;
   font-weight: 400;
 }
 
@@ -146,12 +146,12 @@
 
 .contentsLeft textarea {
   width: 100%;
-  height: 300px;
+  height: 30rem;
 }
 
 .contentsLeft textarea {
   width: 100%;
-  height: 300px;
+  height: 30rem;
 }
 
 .contentsLeft textarea::-webkit-scrollbar {
@@ -171,7 +171,7 @@
   align-items: center;
   justify-content: center;
   color: secondary;
-  margin-bottom: 4px;
+  margin-bottom: 0.4rem;
   width: 100%;
   transition: color 300ms ease-in-out;
 }
@@ -187,9 +187,9 @@
 
 .toolBtn svg {
   display: block;
-  width: 48px;
-  height: 48px;
-  padding: 14px;
+  width: 4.8rem;
+  height: 4.8rem;
+  padding: 1.4rem;
 }
 
 .footer {
@@ -199,7 +199,7 @@
 }
 
 .closeBtn {
-  height: 48px;
+  height: 4.8rem;
 }
 
 /* NOTE: Dark theme */
@@ -219,7 +219,7 @@
 
 @media screen and (min-width: 768px) {
   .workList {
-    padding: 0 10px;
+    padding: 0 1rem;
   }
 
   .contentsLeft {
@@ -231,7 +231,7 @@
   }
 
   .openBtn:hover {
-    transform: translate3d(0px, -0.25rem, 0px);
+    transform: translate3d(0px, -0.4rem, 0px);
     box-shadow: card-shadow;
   }
 
