--- a/src/styles/modules/work.module.css
+++ b/src/styles/modules/work.module.css
@@ -28,32 +28,32 @@
 }
 
 .openBtn svg {
-  padding: 12px;
-  width: 48px;
-  height: 48px;
+  padding: 1.2rem;
+  width: 4.8rem;
+  height: 4.8rem;
   color: secondary;
 }
 
 .toolTip {
   position: absolute;
-  top: 12px;
-  right: 58px;
-  padding: 2px 10px;
+  top: 1.2rem;
+  right: 5.8rem;
+  padding: 0.2rem 1rem;
   background-color: light-background;
   font-size: font-size-14;
   line-height: line-height-14;
   letter-spacing: letter-spacing-14;
   color: primary;
   font-weight: 700;
-  border-radius: 6px;
+  border-radius: 0.6rem;
 }
 
 .toolTip::after {
   position: absolute;
-  top: 4px;
-  right: -14px;
-  margin-left: -8px;
-  border-width: 8px;
+  top: 0.4rem;
+  right: -1.4rem;
+  margin-left: -0.8rem;
+  border-width: 0.8rem;
   border-style: solid;
   border-color: transparent transparent transparent light-background;
   content: '';
@@ -61,16 +61,16 @@
 
 .editor {
   background-color: white;
-  border: 1px solid background;
-  border-radius: 4px;
+  border: 0.1rem solid background;
+  border-radius: 0.4rem;
 }
 
 .editorHeader {
   background-color: light-background;
-  padding: 8px 12px;
-  border-bottom: 1px solid background;
-  border-top-right-radius: 4px;
-  border-top-left-radius: 4px;
+  padding: 0.8rem 1.2rem;
+  border-bottom: 0.1rem solid background;
+  border-top-right-radius: 0.4rem;
+  border-top-left-radius: 0.4rem;
 }
 
 .editorHeader h2 {
@@ -82,31 +82,31 @@
 }
 
 .form {
-  padding: 12px;
+  padding: 1.2rem;
 }
 
 .inputGroup {
-  margin-bottom: 8px;
+  margin-bottom: 0.8rem;
 }
 
 .inputGroup input,
 .inputGroup textarea {
   width: 100%;
-  padding: 8px;
+  padding: 0.8rem;
   font-size: font-size-16;
   line-height: line-height-16;
   letter-spacing: letter-spacing-16;
   color: primary;
-  border: 1px solid background;
-  border-radius: 4px;
+  border: 0.1rem solid background;
+  border-radius: 0.4rem;
 }
 
 .inputGroup input {
-  height: 32px;
+  height: 3.2rem;
 }
 
 .inputGroup textarea {
-  height: 120px;
+  height: 12rem;
 }
 
 .inputGroup textarea::-webkit-scrollbar {
@@ -117,24 +117,24 @@
   display: flex;
   justify-content: flex-end;
   align-items: center;
-  padding: 8px 12px;
+  padding: 0.8rem 1.2re;
 }
 
 .previewBtn,
 .editorBtn {
-  height: 36px;
+  height: 3.6rem;
 }
 
 .previewBtn {
-  margin-right: 8px;
+  margin-right: 0.8rem;
 }
 
 .editorBtn {
-  width: 80px;
+  width: 8rem;
 }
 
 .preview {
-  margin-top: 24px;
+  margin-top: 2.4rem;
 }
 
 /* NOTE: Dark theme */
@@ -158,7 +158,7 @@
 .workGroup.isDark .editor {
   background-color: dark-light-background;
   border: none;
-  border-radius: 4px;
+  border-radius: 0.4rem;
 }
 
 .workGroup.isDark input,
@@ -175,7 +175,7 @@
 @media screen and (min-width: 768px) {
   .workGroup {
     height: 100vh;
-    padding: 24px 0;
+    padding: 2.4rem 0;
   }
 
   .header h1 {
@@ -185,6 +185,6 @@
   }
 
   .toolTip {
-    top: 20px;
+    top: 2rem;
   }
 }
