--- a/src/styles/modules/work.module.css
+++ b/src/styles/modules/work.module.css
@@ -117,7 +117,7 @@
   display: flex;
   justify-content: flex-end;
   align-items: center;
-  padding: 0.8rem 1.2re;
+  padding: 0.8rem 1.2rem;
 }
 
 .previewBtn,
