라우터 정리 및 Login개선작업

--- a/src/styles/constants/color.css
+++ b/src/styles/constants/color.css
@@ -1,5 +1,8 @@
-@value primary: #263238;
+@value primary: #1d1d1d;
 @value secondary: #546e7a;
+
+@value barnd-color:#3da5f5;
+
 
 @value white: #fff;
 @value black: #000;
