--- a/src/styles/modules/work.module.css
+++ b/src/styles/modules/work.module.css
@@ -18,6 +18,7 @@
   display: flex;
   justify-content: space-between;
   align-items: center;
+  margin-bottom: 1.4rem;
 }
 
 .header h1 {
@@ -28,10 +29,8 @@
 }
 
 .openBtn svg {
-  padding: 1.2rem;
-  width: 4.8rem;
-  height: 4.8rem;
-  color: secondary;
+  font-size: 1.8rem;
+  margin-right: 0.8rem;
 }
 
 .toolTip {
