--- a/src/styles/layouts/grids.css
+++ b/src/styles/layouts/grids.css
@@ -18,6 +18,13 @@
   flex-wrap: wrap;
 }
 
+@media screen and (min-width: 768px) {
+  .articleGroup {
+    padding: 2.4rem 0;
+    height: 100vh;
+  }
+}
+
 .container [class^='col-'] {
   padding: 0 1rem;
 }
