자주 사용하는 기본모듈 추가

--- a/src/styles/layouts/grids.css
+++ b/src/styles/layouts/grids.css
@@ -15,13 +15,14 @@
 
 .container .row {
   display: flex;
-  flex-wrap: wrap;
+  flex-wrap: nowrap;
 }
 
 @media screen and (min-width: 768px) {
   .articleGroup {
     padding: 2.4rem 0;
     height: 100vh;
+    width: 100%;
   }
 }
 
@@ -80,7 +81,7 @@
     width: 66.66667%;
   }
   .container .col-md-9 {
-    width: 75%;
+    /* width: 75%; */
   }
   .container .col-md-10 {
     width: 83.33333%;
