--- a/src/styles/constants/color.css
+++ b/src/styles/constants/color.css
@@ -1,7 +1,7 @@
 @value primary: #1d1d1d;
 @value secondary: #546e7a;
 
-@value barnd-color:#3da5f5;
+@value barnd-color:#35C5F0;
 
 
 @value white: #fff;
@@ -10,8 +10,8 @@
 @value light-background: #f5f5f5;
 @value background: #eceff1;
 
-@value green: #009EB4;
-@value dark-green: #028597;
+@value green: #35C5F0;
+@value dark-green: #3da5f5;
 
 @value light-green: #6EE443;
 @value dark-light-green: #62CC3C;
