--- a/src/styles/layouts/grids.css
+++ b/src/styles/layouts/grids.css
@@ -3,10 +3,6 @@
   padding: 2rem 0 8rem;
 }
 
-.main-content::-webkit-scrollbar {
-  display: none;
-}
-
 .container {
   width: 100%;
   padding: 0 0.5rem;
@@ -20,7 +16,7 @@
 
 @media screen and (min-width: 768px) {
   .articleGroup {
-    padding: 2.4rem 0;
+    padding: 2.4rem 0 2.4rem 180px;
     height: 100vh;
     width: 100%;
   }
@@ -95,6 +91,10 @@
 }
 
 @media screen and (min-width: 1200px) {
+  .articleGroup {
+    padding: 2.4rem 0 2.4rem 280px;
+  }
+
   .container {
     max-width: 114rem;
     padding: 0;
