--- a/src/styles/modules/common.module.css
+++ b/src/styles/modules/common.module.css
@@ -339,7 +339,7 @@ button.mymemuBtn {
   padding: 1.6rem;
   width: 60%;
   height: 100vh;
-  background-color: white;
+  background-color: #fff;
   z-index: sidebar-level;
   transform: translate3d(-100%, 0, 0);
   transition: transform 300ms ease-in-out;
