--- a/src/styles/modules/sidebar.module.css
+++ b/src/styles/modules/sidebar.module.css
@@ -6,6 +6,10 @@
 
 @value snb-level from '../constants/z-index.css';
 
+.floating {
+  position: absolute;
+}
+
 .article {
   position: relative;
   display: flex;
@@ -20,7 +24,8 @@
 .header {
   display: flex;
   align-items: center;
-  justify-content: flex-start;
+  justify-content: center;
+  width: 100%;
 }
 
 .navGroup {
@@ -58,18 +63,15 @@
   pointer-events: none;
 }
 
-.tabletLogo {
-  margin-bottom: 6.6rem;
+.logo {
+  display: block;
+  margin-bottom: 3.3rem;
 }
 
-.tabletLogo a {
-  display: inline-block;
-}
-
-.tabletLogo img {
-  width: 6rem;
-  height: 6rem;
-}
+.logo img {
+    width: 100px;
+    height: auto;
+  }
 
 .footer {
   position: absolute;
@@ -114,17 +116,21 @@
 }
 
 @media screen and (min-width: 1200px) {
+  .header {
+    justify-content: flex-start;
+  }
+
   .logo {
-    margin-bottom: 6.6rem;
+    margin-bottom: 3.6rem;
   }
 
   .logo a {
-    display: inline-block;
+    display: block;
   }
 
   .logo img {
-    width: 100%;
-    height: 3.2rem;
+    width: 6em;
+    height: auto;
   }
 
   .snbItemButton {
