--- a/src/pages/product/product-detail.module.css
+++ b/src/pages/product/product-detail.module.css
@@ -17,16 +17,11 @@
   align-items: center;
 }
 
-.headerWrapper div a {
-  margin-right: 8px;
+.headerWrapper div button {
+  width: 8em;
   font-size: font-size-14;
   line-height: line-height-14;
   letter-spacing: letter-spacing-14;
-}
-
-.headerWrapper div button,
-.headerWrapper div a {
-  width: 4em;
 }
 
 .headerWrapper h3 {
@@ -45,14 +40,6 @@
     font-size: font-size-16;
     line-height: line-height-16;
     letter-spacing: letter-spacing-16;
-  }
-
-  input {
-    border: 1px solid overlay-black;
-    border-radius: 4px;
-    width: 180px;
-    height: 35px;
-    padding: 2px 4px;
   }
 
   label {
