ui 컴포넌트 제작

--- a/src/pages/product/product-detail.module.css
+++ b/src/pages/product/product-detail.module.css
@@ -18,10 +18,8 @@
 }
 
 .headerWrapper div button {
-  width: 8em;
   font-size: font-size-14;
-  line-height: line-height-14;
-  letter-spacing: letter-spacing-14;
+  font-weight: 700;
 }
 
 .headerWrapper h3 {
