--- a/src/styles/modules/work.module.css
+++ b/src/styles/modules/work.module.css
@@ -28,6 +28,14 @@
   color: primary;
 }
 
+.openBtn {
+  width: 110px;
+  height: 42px;
+  font-size: font-size-16;
+  line-height: line-height-16;
+  letter-spacing: letter-spacing-16;
+}
+
 .openBtn svg {
   font-size: 1.8rem;
   margin-right: 0.8rem;
