firebase productrepository 생성 및 연결 테스트

--- a/src/pages/product/product-detail.module.css
+++ b/src/pages/product/product-detail.module.css
@@ -28,13 +28,15 @@
   letter-spacing: letter-spacing-18;
 }
 
+.imageSetting input,
+.imageSetting button {
+  display: none;
+}
 
 .form {
-  max-height: calc(100vh - 102px);
-
   strong {
     display: inline-block;
-    margin-top: 24px;
+    margin-bottom: 14px;
     font-size: font-size-16;
     line-height: line-height-16;
     letter-spacing: letter-spacing-16;
