상품등록 기능 구현

--- a/src/pages/product/product-detail.module.css
+++ b/src/pages/product/product-detail.module.css
@@ -32,7 +32,6 @@
 .imageSetting button {
   display: none;
 }
-
 .form {
   strong {
     display: inline-block;
@@ -53,6 +52,13 @@
     color: #ddd;
     font-size: 52px;
     cursor: pointer;
+    overflow: hidden;
+
+    img  {
+      width: 100%;
+      height: auto;
+      object-fit: contain;
+    }
   }
 
   textarea {
