--- a/src/styles/layouts/grids.css
+++ b/src/styles/layouts/grids.css
@@ -77,7 +77,7 @@
     width: 66.66667%;
   }
   .container .col-md-9 {
-    /* width: 75%; */
+    width: 75%;
   }
   .container .col-md-10 {
     width: 83.33333%;
