--- a/src/styles/layouts/grids.css
+++ b/src/styles/layouts/grids.css
@@ -16,7 +16,7 @@
 
 @media screen and (min-width: 768px) {
   .articleGroup {
-    padding: 2.4rem 0 2.4rem 180px;
+    padding: 10px 0 10px 180px;
     height: 100vh;
     width: 100%;
   }
@@ -92,7 +92,7 @@
 
 @media screen and (min-width: 1200px) {
   .articleGroup {
-    padding: 2.4rem 0 2.4rem 280px;
+    padding: 10px 0 10px 280px;
   }
 
   .container {
