--- a/src/styles/modules/login.module.css
+++ b/src/styles/modules/login.module.css
@@ -46,34 +46,57 @@
   line-height: line-height-24;
   letter-spacing: letter-spacing-24;
   text-align: center;
-  font-weight: 400;
 }
 
 .form input {
   height: 3.2rem;
   border-bottom: 1px solid #d4d4d4;
-  padding: 0.4rem;
-  margin-bottom: 2rem;
+  margin-bottom: 1rem;
 }
 
-.form
+.form {
+  font-size: font-size-14;
+  line-height: line-height-14;
+  letter-spacing: letter-spacing-14;
+}
 
 .easyLogin {
-  margin-top: 2rem;
   font-size: font-size-14;
   line-height: line-height-14;
   letter-spacing: letter-spacing-14;
   text-align: center;
+
+  span {
+    display: inline-block;
+    margin: 1rem 0;
+  }
 }
 
 .buttonGroup {
   display: flex;
   justify-content: center;
   align-items: center;
+
+  > div{
+    position: relative;
+    flex: 1 1 auto;
+
+    svg {
+      position: absolute;
+      top: 50%;
+      left: 22px;
+      font-size: 18px;
+      transform: translateY(-50%);
+    }
+
+    &:hover {
+      opacity: 0.4;
+    }
+  } 
 }
 
 .authBtn {
-  flex: 1 1 auto;
+  width: 100%;
   font-size: 1.6rem;
   font-weight: 400;
 }
@@ -82,6 +105,3 @@
   margin-left: 6px;
 }
 
-.authBtn:hover {
-  opacity: 0.4;
-}
