스타일 리뉴얼에 따른 레이아웃 수정작업

--- a/src/styles/modules/member-card.module.css
+++ b/src/styles/modules/member-card.module.css
@@ -13,7 +13,8 @@
   align-items: flex-start;
   justify-content: center;
   width: 100%;
-  border-radius: 2.2rem;
+  max-height: calc(100vh - 130px);
+  overflow-y: auto;
 }
 
 .meberItem {
