--- a/src/styles/modules/sidebar.module.css
+++ b/src/styles/modules/sidebar.module.css
@@ -16,7 +16,7 @@
   flex-direction: column;
   align-items: flex-start;
   padding: 2.4rem 0;
-  height: 100vh;
+  height: calc(100vh - 60px);
   background-color: white;
   z-index: snb-level;
 }
