--- a/src/styles/modules/error-page.module.css
+++ b/src/styles/modules/error-page.module.css
@@ -9,7 +9,7 @@
   flex-direction: column;
   align-items: center;
   justify-content: center;
-  height: 100vh;
+  height: calc(100vh - 180px);
 }
 
 .errorImg {
